// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Molecule tests render Modal correctly 1`] = `<DocumentFragment />`;

exports[`Modal Molecule tests render Modal correctly open 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  margin-right: 0.5rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c5 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c6 {
  color: #000000;
  font-size: 1.5rem;
}

.c9 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c9:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c9:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:disabled {
  cursor: not-allowed;
}

.c10 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c10:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c10 .material-symbols-sharp {
  color: inherit;
}

.c10:disabled {
  cursor: not-allowed;
}

.c4 {
  margin-left: auto;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c0 {
  position: fixed;
  inset: 0;
  z-index: 102;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 1.25rem;
}

.c1 {
  max-width: 576px;
  width: 100%;
  display: flex;
  flex-direction: column;
  min-height: 0px;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  border-radius: 4px;
  z-index: 1;
}

.c2 {
  height: 4.6875rem;
  padding: 0 1.25rem;
  display: flex;
  align-items: center;
}

.c7 {
  padding: 0 1.25rem 1.25rem 1.25rem;
  display: flex;
  flex-direction: column;
}

.c8 {
  padding: 1.25rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-top: auto;
}

.c11 {
  position: absolute;
  inset: 0;
  z-index: 0;
  background-color: rgba(0,0,0,0.5);
}

<div
    class="c0"
    data-testid="modal-container"
    style="opacity: 0;"
  >
    <div
      class="c1"
      minheight="0"
      style="opacity: 0; transform: translate3d(0px, 50px, 0px);"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
          font-family="roboto"
          mr="0.5rem"
        >
          Create Flag
        </h2>
        <button
          class="c4"
          iconsize="32px"
          ml="auto"
          variant="neutral"
        >
          <div
            class="c5"
            data-testid="icon-container"
            size="24"
          >
            <span
              class="c6 material-symbols-sharp"
              color="#000000"
              data-testid="icon"
              size="24"
            >
              close
            </span>
          </div>
        </button>
      </div>
      <div
        class="c7"
      >
        Body Content
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          data-testid="button"
          ml="0.25rem"
          variant="neutral"
        >
          <span
            class=""
          >
            Close
          </span>
        </button>
        <button
          class="c10"
          data-testid="button"
          ml="0.25rem"
          variant="primary"
        >
          <span
            class=""
          >
            Create
          </span>
        </button>
      </div>
    </div>
    <div
      class="c11"
    />
  </div>
</DocumentFragment>
`;

exports[`Modal Molecule tests render Modal with custom props 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  margin-right: 0.5rem;
  font-family: 'Roboto',sans-serif;
  color: #000000;
}

.c5 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c6 {
  color: #000000;
  font-size: 1.5rem;
}

.c9 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c9:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c9:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:disabled {
  cursor: not-allowed;
}

.c10 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c10:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c10 .material-symbols-sharp {
  color: inherit;
}

.c10:disabled {
  cursor: not-allowed;
}

.c4 {
  margin-left: auto;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c0 {
  position: fixed;
  inset: 0;
  z-index: 102;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 1.25rem;
}

.c1 {
  max-width: 992px;
  width: 100%;
  display: flex;
  flex-direction: column;
  min-height: 300px;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  border-radius: 4px;
  z-index: 1;
}

.c2 {
  height: 4.6875rem;
  padding: 0 1.25rem;
  display: flex;
  align-items: center;
}

.c7 {
  padding: 0 1.25rem 1.25rem 1.25rem;
  display: flex;
  flex-direction: column;
}

.c8 {
  padding: 1.25rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-top: auto;
}

.c11 {
  position: absolute;
  inset: 0;
  z-index: 0;
  background-color: rgba(0,0,0,0.5);
}

<div
    class="c0"
    data-testid="modal-container"
    style="opacity: 0;"
  >
    <div
      class="c1"
      minheight="300"
      style="opacity: 0; transform: translate3d(0px, 50px, 0px);"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
          font-family="roboto"
          mr="0.5rem"
        >
          Create Flag Large
        </h2>
        <button
          class="c4"
          iconsize="32px"
          ml="auto"
          variant="neutral"
        >
          <div
            class="c5"
            data-testid="icon-container"
            size="24"
          >
            <span
              class="c6 material-symbols-sharp"
              color="#000000"
              data-testid="icon"
              size="24"
            >
              close
            </span>
          </div>
        </button>
      </div>
      <div
        class="c7"
      >
        Body Content
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          data-testid="button"
          ml="0.25rem"
          variant="neutral"
        >
          <span
            class=""
          >
            Close
          </span>
        </button>
        <button
          class="c10"
          data-testid="button"
          ml="0.25rem"
          variant="primary"
        >
          <span
            class=""
          >
            Create
          </span>
        </button>
      </div>
    </div>
    <div
      class="c11"
    />
  </div>
</DocumentFragment>
`;
